# manifold

./: .cproject  .project  HMC.patch  build_log_HUT.txt  manifold.files  manifold.includes  setup.sh  setup.sh~
kernel/: clock.cc  clock.h
models/cache/mcp-cache/: L1_cache.cpp  L1_cache.h  L2_cache.h  LLP_cache.cpp  LLS_cache.cpp  Makefile.am  mux_demux.cpp  mux_demux.h
models/kitfox/proxy/: kitfox_proxy.cc  kitfox_proxy.h
models/memory/DRAMSim2/: Makefile.am  dram_sim.cpp  dram_sim.h
models/processor/spx/: Makefile.am  component.cc  component.h  instruction.h  pipeline.cc
models/qsim/proxy/: proxy.cc
simulator/smp/: state
simulator/smp/QsimProxy/: .cproject  .project  BuildLog.txt  Makefile  Makefile.HMC  Makefile.HMC.UnitTest  Makefile.HMC.UnitTest.kitfox  Makefile.HMC.kitfox  Makefile.kitfox  Makefile.kitfox.HUT  Makefile.kitfox.HUT~  build_log_KITFOX.txt  build_log_KITFOX.txt~  dramsim  smp_hmc_unit_test.cc  smp_l1l2.cc  smp_llp.cc
simulator/smp/benchmark/: graphbig_a64.tar.xz
simulator/smp/common/: cache_builder.cc  dvfs_controller.cpp  dvfs_controller.h  hmc_xbar.cpp  hmc_xbar.h  kitfox_builder.cc  kitfox_builder.h  mc_builder.cc  mc_builder.h  pkt_generator.cpp  pkt_generator.h  proc_builder.cc  proc_builder.h  serdes_link.cpp  serdes_link.h  sysBuilder_llp.cc  sysBuilder_llp.h  sysBuilder_llp_HUT.cpp  sysBuilder_llp_HUT.h
simulator/smp/config/: .old.cfg  3d_die.ini  3d_die.ini.example  3d_die.ini.example~  3d_die.ini~  3d_die_HMC.ini  HMC_4layer_4SerDes.config  HMC_Unit_Test.cfg  HMC_Unit_Test.cfg~  (+26 more)
uarch/: DestMap.h  kitfoxCounter.h  memMsg.h
(+18 files in other folders)
